test/main/com/ocaml/sdk/output/errors/unbound/open.ml
open G
(*
File "open.ml", line 1, characters 5-6:
Error: Unbound module G

File "open.ml", line 1, characters 5-6:
1 | open G
         ^
Error: Unbound module G
*)